--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     setInterval(spawnHeart, 700);
   </script>
   <main>
-    <img src="https://media.discordapp.net/attachments/797497770193059840/1358243905585287369/Mischiefhoodie_7-transp_byFeve.png?ex=67f322b6&is=67f1d136&hm=08a9f5255dc3f07a1206b4ef0b687943579206b9f6c95624cd3d5e39ff5dd726&=&format=webp&quality=lossless&width=700&height=680" alt="fFoxes portrait" class="portrait" />
+    <img src="mischief.png" alt="fFoxes portrait" class="portrait" />
     <h1>fFoxes</h1>
     <p class="tagline"><span style="white-space: nowrap;">full-time streamer, full-time foxes.</span> <span style="white-space: nowrap;">big heart, big dreams. 💛🦊</span></p>
     <div class="links">
