--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <a href="https://discord.gg/grr6dQkXP8" class="link" target="_blank"><i class="fab fa-discord"></i> Discord</a>
     </div>
     <footer>
-      日本語の中級者ですから、簡単な日本語がオッケーです。 ✨
+      日本語の中級者ですから、 <span style="white-space: nowrap;">簡単な日本語がオッケーです。✨</span>
     </footer>
   </main>
 </body>
