--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
+  <!-- Open Graph (Discord, Facebook, Telegram, etc.) -->
+  <meta property="og:title" content="🦊 fFoxes" />
+  <meta property="og:description" content="Full-time streamer, full-time foxes. Big heart, big dreams. 💛🦊" />
+  <meta property="og:image" content="https://ffoxes.com/preview.png" />
+  <meta property="og:url" content="https://ffoxes.com" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="🦊 fFoxes" />
+  <meta name="twitter:description" content="Full-time streamer, full-time foxes. Big heart, big dreams. 💛🦊" />
+  <meta name="twitter:image" content="https://ffoxes.com/preview.png" />
+  
   <title>fFoxes.com</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>🦊</text></svg>">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
